--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wellcome to kokoa talk</title>
@@ -23,15 +23,18 @@
     </div>
 
     <header class="wellcom-header">
-        <h1 class="wellcom-header__title">Welcome to kokoaTalk</h1>
-        <p class="wellcom-header__text">If you have a kokoaTalk Account, log in with your email or Phone number</p>
+      <h1 class="wellcom-header__title">Welcome to kokoaTalk</h1>
+      <pre class="wellcom-header__text">
+If you have a kokoaTalk Account, 
+log in with your email or Phone number
+      </pre>
     </header>
 
     <form id="login-form">
-        <input type="text" placeholder="Email or phone number"/>
-        <input type="password" placeholder="Password"/>
-        <input type="submit" value="Log In"/>        
-        <a href="#">Find Kokoa Account or Password</a>
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kokoa Account or Password</a>
     </form>
 
     <script
