--- a/friends.html
+++ b/friends.html
@@ -37,12 +37,18 @@
       </div>
     </header>
 
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__btn">          
+        <li class="nav__btn">
           <a class="nav__link" href="#"><i class="fas fa-user fa-2x"></i></a>
         </li>
-        <li class="nav__btn">          
+        <li class="nav__btn">
           <a class="nav__link" href="#">
             <span class="nav__noti">1</span>
             <i class="far fa-comment fa-2x"></i>
@@ -51,7 +57,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
-        <li class="nav__btn">          
+        <li class="nav__btn">
           <a class="nav__link" href="#">
             <span class="nav__dot"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
