--- a/friends.html
+++ b/friends.html
@@ -43,6 +43,17 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4" class="user-component__avatar"/>
+        <div class="user-component__text">
+          <h4 class="user-component__title">Hyunho Kim</h4>
+          <h6 class="user-component__subtitle">sub title Hyunho Kim</h6>
+        </div>        
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
