--- a/friends.html
+++ b/friends.html
@@ -43,16 +43,44 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4" class="user-component__avatar"/>
-        <div class="user-component__text">
-          <h4 class="user-component__title">Hyunho Kim</h4>
-          <h6 class="user-component__subtitle">sub title Hyunho Kim</h6>
-        </div>        
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Hyunho Kim</h4>
+            <!-- <h6 class="user-component__subtitle">sub title Hyunho Kim</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+              <!-- <h6 class="user-component__subtitle">sub title Hyunho Kim</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+      </div>
+    </main>
+
 
     <nav class="nav">
       <ul class="nav__list">
