--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat kokoa talk</title>
+    <title>Find kokoa talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,16 +23,10 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span>
           <i class="fas fa-search fa-lg"></i>
-        </span>
-        <span>
-            <i class="fas fa-comment-dots fa-lg"></i>
-        </span>
-        <span>
-          <i class="fas fa-music fa-lg"></i>
         </span>
         <span>
           <i class="fas fa-cog fa-lg"></i>
@@ -41,20 +35,22 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Hyunho Kim</h4>
-            <h6 class="user-component__subtitle">Please check My kakao Account Info</h6>
-          </div>
+      <div class="find-icons">
+        <div class="find-icons__icon">
+            <i class="fas fa-qrcode"></i>
+            <span>QR Code</span>
         </div>
-        <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+        <div class="find-icons__icon">
+            <i class="far fa-address-book"></i>
+            <span>Add by Contacts</span>
+        </div>
+        <div class="find-icons__icon">
+            <i class="fas fa-fingerprint"></i>
+            <span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+            <i class="far fa-envelope"></i>
+            <span>Invite</span>
         </div>
       </div>
     </main>
@@ -62,18 +58,20 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html">              
-              <i class="far fa-user fa-2x"></i>
-        </a>
+          <a class="nav__link" href="friends.html">
+            <i class="far fa-user fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chat.html">
             <span class="nav__noti badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search-plus fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
