--- a/friends.html
+++ b/friends.html
@@ -74,8 +74,10 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -89,12 +91,12 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chat.html">
-            <span class="nav__noti">1</span>
+            <span class="nav__noti badge">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
