--- a/find.html
+++ b/find.html
@@ -53,6 +53,11 @@
             <span>Invite</span>
         </div>
       </div>
+
+      <div class="recommend-friends">
+        <h6 class="recommend-friends__title">Recommend Friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
     </main>
 
     <nav class="nav">
