open chat 구현 (1)
1. header 및 title 구현
2. 왼쪽 coiumn 구현

--- a/find.html
+++ b/find.html
@@ -58,6 +58,26 @@
         <h6 class="recommend-friends__title">Recommend Friends</h6>
         <span>You have no recommended friends.</span>
       </div>
+
+      <div class="open-chat">
+          <div class="open-chat__header">
+            <h4>Open Chat</h4>
+            <span>Go to Openchat Home <i class="fas fa-chevron-right "></i></span>            
+          </div>
+          <div class="open-post">
+            <div class="open-post__colum">
+                <h5 class="open-post__title">#BTS</h5>
+                <h6 class="open-post__hashtag">#bts#army#friends</h6>
+                <div class="open-post__members">
+                    <img src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"/>
+                    <span class="open-post__members--count">802 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__members--status">Active</span>
+                </div>
+            </div>
+            <div class="open-post__colum"></div>
+          </div>
+      </div>
     </main>
 
     <nav class="nav">
