--- a/more.html
+++ b/more.html
@@ -32,7 +32,9 @@
           <i class="fas fa-music fa-lg"></i>
         </span>
         <span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog fa-lg"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -81,6 +83,12 @@
                 </div>
                 <span class="more-suggestions__icon-text">Kakao Story</span>
             </div>
+            <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
+                  <i class="fas fa-quote-right"></i>
+              </div>
+              <span class="more-suggestions__icon-text">Kakao Story</span>
+          </div>            
         </div>
       </div>
     </main>
