--- a/settings.html
+++ b/settings.html
@@ -22,12 +22,33 @@
       </div>
     </div>
 
-    <header class="screen-header">
-
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <i class="fas fa-angle-left fa-2x"></i>
+        </div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+            <i class="fas fa-search fa-lg"></i>
+        </div>
     </header>
 
-    <main class="main-screen more-screen">
-
+    <main class="main-screen">
+        <ul class="setting-list">
+            <li class="setting-list__item">
+                <i class="fas fa-bullhorn"></i>
+                <span>Notices</span>
+            </li>
+            <li class="setting-list__item">
+                <i class="fas fa-flask"></i>
+                <span>Kakao Lab</span>
+            </li>
+            <li class="setting-list__item">
+                <i class="fas fa-info-circle"></i>
+                <span>Version</span>
+            </li>
+        </ul>
     </main>
 
     <nav class="nav">
