Setting 마무리- chatting screen 시작

--- a/settings.html
+++ b/settings.html
@@ -24,7 +24,9 @@
 
     <header class="alt-header">
         <div class="alt-header__column">
-            <i class="fas fa-angle-left fa-2x"></i>
+            <a href="more.html">
+                <i class="fas fa-angle-left fa-2x"></i>
+            </a>
         </div>
         <div class="alt-header__column">
             <h1 class="alt-header__title">Settings</h1>
@@ -37,16 +39,22 @@
     <main class="main-screen">
         <ul class="setting-list">
             <li class="setting-list__item">
-                <i class="fas fa-bullhorn"></i>
-                <span>Notices</span>
+                <div class="setting-list__item--colum">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>                
             </li>
             <li class="setting-list__item">
-                <i class="fas fa-flask"></i>
-                <span>Kakao Lab</span>
+                <div class="setting-list__item--colum"></div>
+                    <i class="fas fa-flask"></i>
+                    <span>Kakao Lab</span>
+                </div>                
             </li>
             <li class="setting-list__item">
-                <i class="fas fa-info-circle"></i>
-                <span>Version</span>
+                <div class="setting-list__item--colum"></div>
+                    <i class="fas fa-info-circle"></i>
+                    <span>Version</span>
+                </div>                                
             </li>
         </ul>
     </main>
