--- a/chat.html
+++ b/chat.html
@@ -41,6 +41,7 @@
     </header>
 
     <main class="main-screen">
+      <a href="chatting.html">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -57,6 +58,7 @@
             <div class="badge">1</div>
         </div>
       </div>
+      </a>
     </main>
 
     <nav class="nav">
