--- a/chatting.html
+++ b/chatting.html
@@ -23,22 +23,33 @@
     </div>
 
     <header class="alt-header">
-        <div class="alt-header__column">
-            <a href="more.html">
-                <i class="fas fa-angle-left fa-2x"></i>
-            </a>
-        </div>
-        <div class="alt-header__column">
-            <h1 class="alt-header__title">Hyunho Kim</h1>
-        </div>
-        <div class="alt-header__column">            
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-bars fa-lg"></i></span>
-        </div>
+      <div class="alt-header__column">
+        <a href="chat.html">
+          <i class="fas fa-angle-left fa-2x"></i>
+        </a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Hyunho Kim</h1>
+      </div>
+      <div class="alt-header__column">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-bars fa-lg"></i></span>
+      </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, Une 30, 2020</div>
 
+      <div class="message-row">
+        <img />
+        <div class="message-row__content">
+          <span class="message__author"> Hyunho Kim </span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
