Chat Screen Part Four
Chat Screen Part Four

--- a/chatting.html
+++ b/chatting.html
@@ -41,7 +41,7 @@
       <div class="chat__timestamp">Tuesday, Une 30, 2020</div>
 
       <div class="message-row">
-        <img />
+        <img src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"/>
         <div class="message-row__content">
           <span class="message__author"> Hyunho Kim </span>
           <div class="message__info">
