--- a/chatting.html
+++ b/chatting.html
@@ -60,6 +60,20 @@
       </div>      
     </main>
 
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a Message..."/>            
+            <i class="far fa-smile-wink"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+
+    </form>
+
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
