--- a/friends.html
+++ b/friends.html
@@ -32,7 +32,9 @@
           <i class="fas fa-music fa-lg"></i>
         </span>
         <span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog fa-lg"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -106,6 +108,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
