--- a/chat.html
+++ b/chat.html
@@ -87,6 +87,11 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your Screen is Too big ㅠㅠ</span>
+    </div>
+    
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
