--- a/chatting.html
+++ b/chatting.html
@@ -74,6 +74,10 @@
 
     </form>
 
+    <div id="no-mobile">
+        <span>Your Screen is Too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
