--- a/find.html
+++ b/find.html
@@ -118,6 +118,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your Screen is Too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
