--- a/friends.html
+++ b/friends.html
@@ -112,6 +112,10 @@
     <div class="splash-screen">
       <i class="fas fa-comment"></i>
     </div>
+
+    <div id="no-mobile">
+      <span>Your Screen is Too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
