--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ log in with your email or Phone number
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your Screen is Too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
