--- a/friends.html
+++ b/friends.html
@@ -114,7 +114,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your Screen is Too big ㅠㅠ</span>
+      <span>Your Screen is super big ㅠㅠ</span>
     </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
