--- a/chat.html
+++ b/chat.html
@@ -47,12 +47,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"
             class="user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Hyunho Kim</h4>
-            <h6 class="user-component__subtitle">Please check My kakao Account Info</h6>
+            <h4 class="user-component__title">Ah young</h4>
+            <h6 class="user-component__subtitle">New Message ! </h6>
           </div>
         </div>
         <div class="user-component__column">
