--- a/chatting.html
+++ b/chatting.html
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Hyunho Kim</h1>
+        <h1 class="alt-header__title">talk</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,11 +41,12 @@
       <div class="chat__timestamp">Tuesday, Une 30, 2020</div>
 
       <div class="message-row">
-        <img src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"/>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"/>
         <div class="message-row__content">
-          <span class="message__author"> Hyunho Kim </span>
+          <span class="message__author"> Ah young </span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">
+                I was so happy to be with you this weekend ♥♥</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -53,7 +54,8 @@
       <div class="message-row message-row--own">        
         <div class="message-row__content">          
           <div class="message__info">
-            <span class="message__bubble">Nice to meet you</span>
+            <span class="message__bubble">
+                I was happy to be with you too ♥♥</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
