--- a/friends.html
+++ b/friends.html
@@ -67,11 +67,11 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+              <h4 class="user-component__title user-component__title--not-bold">Ah young</h4>
               <!-- <h6 class="user-component__subtitle">sub title Hyunho Kim</h6> -->
             </div>
           </div>
