--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
           <i class="fas fa-search fa-lg"></i>
         </span>
         <span>
-            <i class="fas fa-comment-dots fa-lg"></i>
+          <i class="fas fa-comment-dots fa-lg"></i>
         </span>
         <span>
           <i class="fas fa-music fa-lg"></i>
@@ -44,31 +44,31 @@
 
     <main class="main-screen">
       <a href="chatting.html">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Ah young</h4>
-            <h6 class="user-component__subtitle">New Message ! </h6>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKpLb-RCLd41eTr7ZU1dZcctHk9w1Fet8sVw&usqp=CAU"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Potts</h4>
+              <h6 class="user-component__subtitle">New Message !</h6>
+            </div>
           </div>
-        </div>
-        <div class="user-component__column">
+          <div class="user-component__column">
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
+          </div>
         </div>
-      </div>
       </a>
     </main>
 
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html">              
-              <i class="far fa-user fa-2x"></i>
-        </a>
+          <a class="nav__link" href="friends.html">
+            <i class="far fa-user fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chat.html">
@@ -77,7 +77,9 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
@@ -91,7 +93,7 @@
     <div id="no-mobile">
       <span>Your Screen is Too big ㅠㅠ</span>
     </div>
-    
+
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
