--- a/chatting.html
+++ b/chatting.html
@@ -41,43 +41,44 @@
       <div class="chat__timestamp">Tuesday, Une 30, 2020</div>
 
       <div class="message-row">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"/>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKpLb-RCLd41eTr7ZU1dZcctHk9w1Fet8sVw&usqp=CAU"
+        />
         <div class="message-row__content">
-          <span class="message__author"> Ah young </span>
+          <span class="message__author"> Potts </span>
           <div class="message__info">
             <span class="message__bubble">
-                I was so happy to be with you this weekend ♥♥</span>
+              Are you drinking with another woman? I'll kill you.^^</span
+            >
             <span class="message__time">21:27</span>
           </div>
         </div>
       </div>
-      <div class="message-row message-row--own">        
-        <div class="message-row__content">          
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">
-                I was happy to be with you too ♥♥</span>
+            <span class="message__bubble"> Please save my life..</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
-      </div>      
+      </div>
     </main>
 
     <form class="reply">
-        <div class="reply__column">
-            <i class="far fa-plus-square"></i>
-        </div>
-        <div class="reply__column">
-            <input type="text" placeholder="Write a Message..."/>            
-            <i class="far fa-smile-wink"></i>
-            <button>
-                <i class="fas fa-arrow-up"></i>
-            </button>
-        </div>
-
+      <div class="reply__column">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a Message..." />
+        <i class="far fa-smile-wink"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
     </form>
 
     <div id="no-mobile">
-        <span>Your Screen is Too big ㅠㅠ</span>
+      <span>Your Screen is Too big ㅠㅠ</span>
     </div>
 
     <script
