--- a/friends.html
+++ b/friends.html
@@ -49,11 +49,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+            src="https://t1.daumcdn.net/liveboard/newsade/c6e46db11a434da9ba61566ef5e9b76c.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Hyunho Kim</h4>
+            <h4 class="user-component__title">Tony</h4>
             <!-- <h6 class="user-component__subtitle">sub title Hyunho Kim</h6> -->
           </div>
         </div>
@@ -67,11 +67,13 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTvwso3hzrLBjhrGXXKvqQMHxw93kV0S3a3Zw&usqp=CAU"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKpLb-RCLd41eTr7ZU1dZcctHk9w1Fet8sVw&usqp=CAU"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">Ah young</h4>
+              <h4 class="user-component__title user-component__title--not-bold">
+                Potts
+              </h4>
               <!-- <h6 class="user-component__subtitle">sub title Hyunho Kim</h6> -->
             </div>
           </div>
@@ -85,11 +87,12 @@
       </div>
     </main>
 
-
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chat.html">
@@ -98,7 +101,9 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
@@ -110,7 +115,27 @@
     </nav>
 
     <div class="splash-screen">
-      <i class="fas fa-comment"></i>
+      <!-- I use below open source -->
+      <!-- https://css-tricks.com/iron-mans-arc-reactor-using-css3-transforms-and-animations/ -->
+      <div class="fullpage-wrapper">
+        <div class="reactor-container">
+          <div class="reactor-container-inner circle abs-center"></div>
+          <div class="tunnel circle abs-center"></div>
+          <div class="core-wrapper circle abs-center"></div>
+          <div class="core-outer circle abs-center"></div>
+          <div class="core-inner circle abs-center"></div>
+          <div class="coil-container">
+            <div class="coil coil-1"></div>
+            <div class="coil coil-2"></div>
+            <div class="coil coil-3"></div>
+            <div class="coil coil-4"></div>
+            <div class="coil coil-5"></div>
+            <div class="coil coil-6"></div>
+            <div class="coil coil-7"></div>
+            <div class="coil coil-8"></div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="no-mobile">
