--- a/more.html
+++ b/more.html
@@ -43,11 +43,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/21324563?s=400&u=153bd5d8ea6c16e64cbf8123460fc1c8567bac7c&v=4"
+            src="https://t1.daumcdn.net/liveboard/newsade/c6e46db11a434da9ba61566ef5e9b76c.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Hyunho Kim</h4>
+            <h4 class="user-component__title">Tony</h4>
             <h6 class="user-component__subtitle">+1 787-493-4219</h6>
           </div>
         </div>
@@ -57,7 +57,7 @@
       </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-            <i class="far fa-calendar-alt"></i>
+          <i class="far fa-calendar-alt"></i>
           <span>Calendar</span>
         </div>
         <div class="icon-row__icon">
@@ -69,7 +69,7 @@
           <span>Themes</span>
         </div>
         <div class="icon-row__icon">
-            <i class="far fa-user-circle"></i>
+          <i class="far fa-user-circle"></i>
           <span>Account</span>
         </div>
       </div>
@@ -77,18 +77,18 @@
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggestions</h4>
         <div class="more-suggestions__icons">
-            <div class="more-suggestions__icon">
-                <div class="more-suggestions__icon-image">
-                    <i class="fas fa-quote-right"></i>
-                </div>
-                <span class="more-suggestions__icon-text">Kakao Story</span>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
             </div>
-            <div class="more-suggestions__icon">
-              <div class="more-suggestions__icon-image">
-                <i class="fas fa-gamepad"></i>
-              </div>
-              <span class="more-suggestions__icon-text">Kakao Game</span>
-          </div>            
+            <span class="more-suggestions__icon-text">Kakao Story</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-gamepad"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kakao Game</span>
+          </div>
         </div>
       </div>
     </main>
@@ -121,7 +121,7 @@
     </nav>
     <div id="no-mobile">
       <span>Your Screen is Too big ㅠㅠ</span>
-    </div>    
+    </div>
     <script
       src="https://kit.fontawesome.com/765605d447.js"
       crossorigin="anonymous"
